# nuodb-odbc

./: .ccls  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: GTest.cmake  NuoDBClient.cmake  Odbc.cmake  Setup.cmake
etc/: build.bat  build.sh  nuoodbc.bat  odbc.ini.sample  runtests.bat  runtests.sh  version.txt.in
src/: Bindings.h  CMakeLists.txt  DescRecord.h  GetDataTypeFilter.cpp  GetDataTypeFilter.h  GetMapper.cpp  GetMapper.h  InfoItems.h  Main.cpp  OdbcBase.h  OdbcConnection.cpp  OdbcConnection.h  OdbcDesc.cpp  OdbcDesc.h  OdbcEnv.cpp  OdbcEnv.h  OdbcError.cpp  OdbcError.h  OdbcObject.cpp  OdbcObject.h  OdbcStatement.cpp  OdbcStatement.h  OdbcTrace.h  OdbcTypeMapper.cpp  OdbcTypeMapper.h  ProductVersion.h.in  ResultSetFilter.h  ResultSetMapper.cpp  ResultSetMapper.h  SetupAttributes.h
src/Win/: CommonUtil.cpp  CommonUtil.h  DsnDialog.cpp  DsnDialog.h  NuoODBC.def  OdbcSetup.cpp  OdbcSetup.h  OdbcSetup.rc  ServiceClient.cpp  ServiceClient.h  ServiceManager.cpp  ServiceManager.h  Setup.cpp  Setup.h  Version.rc2  resource.h
src/Win/res/: resource.en  resource.es  resource.it  resource.ru  resource.uk
test/: CMakeLists.txt  ODBCEscapeTestRequiresChorus.cpp  ODBCMetadataTestRequiresChorus.cpp  ODBCTestBase.h  ODBCTestRequiresChorus.cpp  ODBCTransactionTestRequiresChorus.cpp
